--- a/components/FlagGeeksHubs/FlagGeeksHubs.module.css
+++ b/components/FlagGeeksHubs/FlagGeeksHubs.module.css
@@ -1,30 +1,5 @@
-.row-1 {
-  background-color: rgb(20, 20, 20);
-}
-.row-2 {
-  background-color: rgb(105, 51, 0);
-}
-.row-3 {
-  background-color: rgb(255, 0, 0);
-}
-.row-4 {
-  background-color: rgb(255, 127, 0);
-}
-.row-5 {
-  background-color: rgb(255, 255, 0);
-}
-.row-6 {
-  background-color: rgb(0, 255, 0);
-}
-.row-7 {
-  background-color: rgb(0, 0, 255);
-}
-.row-8 {
-  background-color: rgb(127, 0, 255);
-}
-
-.column {
-  animation-fill-mode: backwards;
+.row_1_column_1 {
+  background-color: red;
 }
 
 @keyframes oscilate {
